Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <p align=center>窗户不能拦住寒风。</p>
   <img src="school7.jpeg" alt="Shree Mahadev Base School" width=400>
 
-  <p>或许，真正的慈悲，就是看见苦难后，默默伸出援手，并持续守护那份希望，直到它生根发芽。</p>
+  <p>或许，真正的慈悲，就是看见苦难后，默默伸出援手，并持续守护那份希望，直到它生根发芽。您可以助一臂之力吗？愿你的善心如同阳光照进孩子们的心！</p>
   <img src="school8.jpeg" alt="Shree Mahadev Base School" width=600>
 
 
@@ -105,4 +105,5 @@
   </tr>
   </table>
 </body>
+
 </html>
